<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Sören Köhler
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Battery Charging Notificator</string>
    <string name="versionTitle">Version:</string>
    <string name="versionName">1.1.0-ALPHA</string>
    <string name="copyright">(c) 2016 Sören Köhler</string>

    <string name="sources_label">Sourcecode:</string>
    <string name="sources_link">https://github.com/soerenkoehler/BatteryChargingNotificator/</string>

    <string name="license_label">Apache License 2.0:</string>
    <string name="license_link">https://github.com/soerenkoehler/BatteryChargingNotificator/blob/master/LICENSE</string>

    <string name="charging_title">Battery Charging Notificator</string>
    <string name="charging_text">charging</string>
    <string name="charged_title">Battery Charging Notificator</string>
    <string name="charged_text">100% charged (click to dismiss)</string>

    <string name="ledModeWhenCharging">Charging:</string>
    <string name="ledModeWhenCharged">Charged:</string>
    <string-array name="ledMode">
        <item>LED On</item>
        <item>LED Off</item>
        <item>Blinking</item>
    </string-array>
</resources>
