<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:weightSum="1">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionName"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sources_label" android:layout_marginTop="8dp"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/sources_link"
              android:autoLink="web"
              android:ellipsize="middle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_label" android:layout_marginTop="8dp"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/license_link"
              android:autoLink="web" android:ellipsize="middle" android:clickable="false"/>
</LinearLayout>